tests/NormalTests/paczka1/small_fuzzy/10018839.err
Error in line 2: jeaesOp3ai S808 72,5
Error in line 10: b7d1TU6 A347 65,9
Error in line 3: l4pPL9sDQ S958 29,5
Error in line 14: HACczC9o S958 77,4
